# NcbiRequest

./: .env.example  README.md  gui.py  index.html  pubmedRequest.py  pyproject.toml  scripts.js
web/: main.html  main.js
